# blabberer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
blabber/: __init__.py  cli.py  face_detect.py  generator.py  postprocess.py  shapes.py
blabberer/: __init__.py  cli.py  face_detect.py  generator.py  postprocess.py  shapes.py
demo/: index.html  package-lock.json  package.json  simple.html  tsconfig.json  vite.config.ts
demo/public/sample/: blabberer_config.json
demo/src/: audioAnalyser.ts  lipSync.ts  main.ts  mouthRenderer.ts  simple.ts
scripts/: generate_reference_images.py
skills/lip-sync-pipeline/: SKILL.md
